# thecherno_opengl

./: .gitignore  Makefile  README.md  meson.build  next-episode.sh
ep02-window/: .gitignore  main.cpp  meson.build
ep03-modern-opengl/: Makefile  main.cpp  meson.build
ep03-modern-opengl/src/: main.cpp
ep04-vertex-buffers/: meson.build
ep04-vertex-buffers/src/: main.cpp
ep05-vertex-attributes/src/: main.cpp
ep07-write-a-shader/src/: main.cpp
ep08-shaders/: playground
ep09-index-buffers/: playground
ep10-errors/: playground.cpp
ep11-uniforms/: playground.cpp
ep14-buffer-layout-abstraction/: VertexBuffer.cpp  VertexBuffer.h
ep15-shader-abstraction/: opengl.session
ep16-renderer/: Shader.cpp  Shader.h  opengl.session
ep19-math/: Application.cpp  opengl.session
ep20-projection-matrices/: Shader.h
ep21-model-view-projection/: opengl.session
ep22-imgui/: Texture.h  opengl.session
ep23-rendering-multiple-objects/: Application.cpp  opengl.session
ep24-test-framework/: Application.cpp  Makefile  Shader.cpp
ep24-test-framework/tests/: Test.h  TestClearColor.cpp  TestClearColor.h  TestMultipleObjects.cpp  TestMultipleObjects.h  TestTriangle.cpp  TestTriangle.h  TestUniform.cpp  TestUniform.h
opengl/: next-episode.sh
opengl/ep08-shaders/: playground.cpp
opengl/ep10/: playground
opengl/ep11/: playground
opengl/ep12/: playground.cpp
opengl/ep12-vertex-arrays/: playground
opengl/ep13/: VertexBuffer.cpp  app
opengl/ep13-opengl-abstraction/: IndexBuffer.h  Makefile  Renderer.cpp  VertexBuffer.h
opengl/ep14/: Application.cpp  (+3 more)
(+46 files in other folders)
