project('the-cheno-opengl', 'cpp')

gl = dependency('gl')
glfw3 = dependency('glfw3')
glew = dependency('glew')

deps = [gl, glfw3, glew]
subdir('ep02-window')
subdir('ep03-modern-opengl')
subdir('ep04-vertex-buffers')
subdir('ep05-vertex-attributes')
subdir('ep07-write-a-shader')
subdir('ep08-shaders')
